更新了数组相关的问题。